fix for feedback button overlaping links

--- a/css/main.css
+++ b/css/main.css
@@ -796,8 +796,8 @@ h3.footer-heading {
 }
 
 #feedback_link { 
-  height: 100px; 
-  width: 90px; 
+  height: auto; 
+  width: 30px; 
   display: inline-block;
   position: fixed; 
   top: 40%;
